Fixing animations on mobile

--- a/wp-content/themes/turner-batson/src/scss/pages/_home.scss
+++ b/wp-content/themes/turner-batson/src/scss/pages/_home.scss
@@ -31,24 +31,26 @@
   }
 }
 
-[data-initializing='true'] .featured-project-nav {
-  animation: extendBar 0.8s cubic-bezier(0.215, 0.61, 0.355, 1) 0.4s 1 both;
-}
+@include media('>=#{$md}') {
+  [data-initializing='true'] .featured-project-nav {
+    animation: extendBar 0.8s cubic-bezier(0.215, 0.61, 0.355, 1) 0.4s 1 both;
+  }
 
-[data-initializing='true'] .branding {
-  animation: inAndRight 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 1.2s 1 both;
-}
+  [data-initializing='true'] .branding {
+    animation: inAndRight 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 1.2s 1 both;
+  }
 
-[data-initializing='true'] .featured-project-slider-nav-item:first-child {
-  animation: inAndUp 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 1.4s 1 both;
-}
+  [data-initializing='true'] .featured-project-slider-nav-item:first-child {
+    animation: inAndUp 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 1.4s 1 both;
+  }
 
-[data-initializing='true'] .featured-project-slider-nav-item {
-  animation: inAndUp 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 1.6s 1 both;
-}
+  [data-initializing='true'] .featured-project-slider-nav-item {
+    animation: inAndUp 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 1.6s 1 both;
+  }
 
-[data-initializing='true'] .featured-project-slider-nav-item:last-child {
-  animation: inAndUp 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 1.8s 1 both;
+  [data-initializing='true'] .featured-project-slider-nav-item:last-child {
+    animation: inAndUp 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 1.8s 1 both;
+  }
 }
 
 .featured-project-slider .slick-list,
